                       User-Visible remctl Changes

remctl 2.19 (unreleased)

    Add new remctl_set_source_ip function to the remctl library API and
    the Perl, PHP, and Python bindings.  Call this function after
    remctl_new and before remctl_open to set the source IP address that
    will be used for subequent client connections to a remctl server.

    Add new remctl_set_ccache function to the remctl library API.  Call
    this function after remctl_new and before remctl_open to set the
    Kerberos credential cache that will be used for client authentication,
    overriding KRB5CCNAME.  Be aware that this will normally change the
    default credential cache for all other GSS-API operations in this
    context or thread, not just for that remctl object, due to GSS-API
    limitations.

    In the client, only check the negotiated GSS-API context flags after
    the context has been fully established.  Current versions of Heimdal,
    including the system Kerberos libraries in Mac OS X Lion, only declare
    mutual authentication once the context negotiation is complete.

    Close a client memory leak caused by the GSS-API context not being
    freed by the client in remctl_close.

    When calling remctl_open on an existing struct remctl object, send
    QUIT to the server if a connection is already open.

    remctld can be configured to pass the subcommand on standard input,
    but the documentation said this was not allowed.  Fix the
    documentation to match the implementation.

    Use PATH_KRB5_CONFIG as the environment variable to set the path to
    krb5-config rather than KRB5_CONFIG when running configure, since the
    latter is used by the Kerberos libraries to specify an alternative
    path to krb5.conf.

    Update to rra-c-util 3.9:

    * Add notices in each file copied from rra-c-util.
    * Prefer gssapi/gssapi.h to gssapi.h.
    * Include strings.h if it exists for strncasecmp on some platforms.