@@ -3,9 +3,11 @@
 remctl 2.19 (unreleased)
 
     Add new remctl_set_source_ip function to the remctl library API and
-    the Perl, PHP, and Python bindings.  Call this function after
+    the Perl, PHP, Python, and Ruby bindings.  Call this function after
     remctl_new and before remctl_open to set the source IP address that
-    will be used for subequent client connections to a remctl server.
+    will be used for subequent client connections to a remctl server.  For
+    the Ruby bindings, this is implemented as the source_ip class variable
+    rather than a separate method.
 
     Add new remctl_set_ccache function to the remctl library API.  Call
     this function after remctl_new and before remctl_open to set the
